--- a/service/service/src/main/webapp/report.html
+++ b/service/service/src/main/webapp/report.html
@@ -105,7 +105,7 @@ function getURLParameter(name) {
     jQuery(document).ready(function() {
     var selText = $(this).text();
     $.ajax({
-        url: 'http://localhost:8080/madalert/resources/report?json=' +getURLParameter("json"),
+        url: document.location.protocol + '//' + document.location.host + '/madalert/resources/report?json=' +getURLParameter("json"),
 //        url: 'http://localhost:8080/madalert/resources/report?json=http://psmad.grid.iu.edu/maddash/grids/Latency+tests+between+all+WLCG+hosts+-+Latency+Tests+Between+WLCG+Latency+Hosts',
         
         crossDomain: true,
