--- a/service/service/src/main/webapp/index.html
+++ b/service/service/src/main/webapp/index.html
@@ -31,11 +31,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand">Madalert</a>
+                    <a href="/madalert/index.html" class="navbar-brand">Madalert</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="http://maddash.aglt2.org/cgi-bin/report"><i class="fa fa-check-square-o  fa-fw"></i>&nbsp; Report</a></li>
+                        <li><a href="/madalert/report.html"><i class="fa fa-check-square-o  fa-fw"></i>&nbsp; Report</a></li>
                         <li><a href="https://github.com/gcarcassi/madalert"><i class="fa fa-github fa-fw"></i>&nbsp; GitHub</a></li>
                         <li><a href="https://github.com/gcarcassi/madalert/wiki"><i class="fa fa-book fa-fw"></i>&nbsp; Wiki</a></li>
                     </ul>
